--- a/index.css
+++ b/index.css
@@ -4,6 +4,31 @@ img {
   max-width: 100%
 }
 
+<style>
+/* regular css */
+#header {
+  position: fixed
+.tabs {
+  padding: 10px 2em
+}
+
+@media screen and (max-width: 500px) {
+/* applies only if the screen is narrower than 500px */
+  .tabs {
+    padding: 3px 1em
+  }
+}
+</style>
+
+.header {
+  background: url(header.png) 50% no-repeat;
+  background-size: contain
+}
+
+input, textarea {
+  max-width:100%
+}
+
 body {
     background-color: 		#000000;
 }
